--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,9 @@
 }
 
 
+/* Utility */
+
+
 body {
     background-color: var(--main-background-color);
     color: var(--main-color-text);
@@ -47,6 +50,45 @@ ul {
 
 img {
     display: block;
+}
+
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+}
+
+.link {
+    text-decoration: none;
+    color: var(--main-color-title);
+}
+
+.logo {
+    display: block;
+    margin-right: 93px;
+
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--main-color-title);
+}
+
+.position {
+    position: relative;
+    color: #2196F3;
+}
+
+.section-title {
+    margin-bottom: 50px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-color-title);
 }
 
 .visually-hidden {
@@ -76,30 +118,6 @@ img {
 
 /* header */
 
-.container.main {
-    display: flex;
-    align-items: center;
-}
-
-.container .list {
-    display: flex;
-}
-
-.site-nav {
-    display: flex;
-}
-
-
-.auth-nav {
-    display: flex;
-}
-
-.auth-nav .link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-
 .header {
     border-bottom-width: 1px;
     border-bottom-style: solid;
@@ -107,88 +125,73 @@ img {
 
 }
 
-.logo.link {
-    display: block;
-    margin-right: 93px;
-
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: var(--main-color-title);
+.header__container {
+    display: flex;
+    align-items: center;
 }
 
-.accent-logo {
+/* ______________________________________________ */
+
+.container .list {
+    display: flex;
+}
+
+.auth-nav {
+    display: flex;
+}
+
+.logo__accent {
     color: var(--accent-color);
 }
 
 /* nav */
 
-.list {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-.site-nav .item,
-.auth-nav .item {
+.site-nav__item,
+.auth-nav__item {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
 }
 
-.site-nav .item+.item {
+.site-nav__item+.site-nav__item{
     margin-left: 50px;
 }
-
-
 
 .auth-nav {
     margin-left: auto;
 }
 
-.auth-nav .item+.item {
+.auth-nav__item + .auth-nav__item {
     margin-left: 50px;
 }
 
-.link {
-    text-decoration: none;
-    color: var(--main-color-title);
-}
-
-.list .link {
+.site-nav__link,
+.auth-nav__link {
     transition: color var(--duration) var(--timing-function) ;
 }
 
-.list .link:hover,
-.list .link:focus {
+.site-nav__link:hover,
+.site-nav__link:focus {
     color: var(--accent-color);
 }
 
-.site-nav .link {
+.site-nav__link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
-.auth-nav.list .link {
+.auth-nav__link {
     color: var(--main-color-text);
 }
 
-.auth-nav .link:hover {
+.auth-nav__link:hover,
+.auth-nav__link:focus {
     color: var(--accent-color);
 }
 
-
-
-.link.position {
-    position: relative;
-    color: #2196F3;
-}
-
-.site-nav .link.position::after {
+.site-nav__link.position::after {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -199,15 +202,12 @@ img {
     background-color: var(--accent-color);
 }
 
-.icon {
+.auth-nav__icon {
     fill: currentColor;
     stroke: currentColor;
 }
 
-
-
-
-.auth-nav.list .link {
+.auth-nav__link {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -231,7 +231,7 @@ img {
     margin-right: auto;
 }
 
-.main-title {
+.hero__title {
     width: 696px;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -242,11 +242,7 @@ img {
     text-transform: uppercase;
     color: var(--main-background-color);
 }
-
-
-/* animatons */
-
-
+/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
 /* Backdrom/Modal */
 
@@ -270,7 +266,6 @@ img {
 .backdrop.is-hidden .modal {
     opacity: 0;
     transform: translate(-50%, 0px);
-  
 }
 
 .modal {
@@ -294,7 +289,7 @@ img {
 
 
 
-.register-form-title {
+.register-form__title {
     display: block;
     text-align: center;
     margin-bottom: 12px;
@@ -302,30 +297,30 @@ img {
     color: var(--main-color-title)
 }
 
-.register-form-group {
+.register-form__group {
     position: relative;
     display: block;
     margin-bottom: 20px;
 
 }
 
-.register-form-field {
+.register-form__field {
 position: relative;
     display: block;
     margin-bottom: 10px;
 }
 
 
-.register-form-lable {
+.register-form__lable {
     display: block;
     margin-bottom: 4px;
     font-weight: 400;
-        font-size: 12px;
-        line-height: 1.16;
-        letter-spacing: 0.01em;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
 }
 
-.register-form-input {
+.register-form__input {
 width: 100%;
 height: 45px;
 padding-left: 42px;
@@ -338,12 +333,12 @@ outline: transparent;
 transition: border var(--duration) var(--timing-function);
 }
 
-.register-form-input:focus,
-.register-form-input:hover {
+.register-form__input:focus,
+.register-form__input:hover {
     border: 1px solid var(--accent-color);
 }
 
-.register-form-message {
+.register-form__message {
 display: block;
     width: 100%;
     height: 130px;
@@ -359,15 +354,15 @@ display: block;
     transition: border var(--duration) var(--timing-function);
 }
 
-.register-form-message:focus,
-.register-form-message:hover {
+.register-form__message:focus,
+.register-form__message:hover {
     border: 1px solid var(--accent-color);
 }
 
 
 
 
-.register-form-agreement {
+.register-form__agreement {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -375,13 +370,13 @@ display: block;
     margin-bottom: 30px;
 }
 
-.register-form-heading {
+.register-form__heading {
     display: block;
-        margin-bottom: 10px;
-        font-size: 14px;
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
-.register-form-icon {
+.register-form__icon {
 position: absolute;
 display: block;
    bottom: 12px;
@@ -389,38 +384,38 @@ display: block;
    transition: fill var(--duration) var(--timing-function);
 }
 
-.register-form-input:focus ~ .register-form-icon,
-.register-form-input:hover ~ .register-form-icon {
+.register-form__input:focus ~ .register-form__icon,
+.register-form__input:hover ~ .register-forь__icon {
 fill: var(--accent-color);
 }
 
-.icon-check {
+.register-form__icon-check {
     opacity: 0;
     transition: opacity var(--duration) var(--timing-function);
 }
-.icon-uncheck {
+.register-form__icon-uncheck {
     opacity: 1;
     transition: opacity var(--duration) var(--timing-function);
 }
 
-.register-form-checkbox:checked + .register-form-icons .icon-check {
+.register-form__checkbox:checked + .register-form__icons .register-form__icon-check {
 opacity: 1;
 }
-.register-form-checkbox:checked+.register-form-icons .icon-uncheck {
+.register-form__checkbox:checked + .register-form__icons .register-form__icon-uncheck {
     opacity: 0;
 }
 
-.register-form-link {
+.register-form__link {
     color: var(--accent-color);
 }
 
-.register-form-btn {
+.register-form__btn {
     display: block;
     margin: 0 auto;
     width: 200px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
+/* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
 /* button */
 
@@ -468,7 +463,7 @@ opacity: 1;
 
 }
 
-.modal-btn {
+.close-btn {
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -484,22 +479,10 @@ opacity: 1;
 transition: fill var(--duration) var(--timing-function);
 }
 
-.modal-btn:hover {
+.close-btn:hover {
     fill: var(--accent-color);
 }
-
-
-/* .modal-btn:hover,
-.modal-btn:focus {
-    border: 1px solid var(--accent-color);
-    color: var(--accent-color);
-} */
-
-
-
-
-
-
+/* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 /* main */
 
 .section {
@@ -523,7 +506,7 @@ transition: fill var(--duration) var(--timing-function);
 }
 
 
-.box-icon {
+.features__icon {
     display: flex;
     width: 270;
     height: 120px;
@@ -534,21 +517,21 @@ transition: fill var(--duration) var(--timing-function);
     border-radius: 4px;
 }
 
-.features .item {
+.features__item {
     width: 270px;
 }
 
-.features .item+.item {
+.features__item + .features__item {
     margin-left: 30px;
 }
 
 /* Чим ми займаемося */
 
-.activity .item+.item {
+.activity__item + .activity__item {
     margin-left: 30px;
 }
 
-.activ-modal {
+.activity__modal {
         position: relative;
     } 
 
@@ -573,11 +556,7 @@ transition: fill var(--duration) var(--timing-function);
 
 } */
 
-.modal-title {
-
-}
-
-.activ-modal .title {
+ .activity__title {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -590,14 +569,12 @@ transition: fill var(--duration) var(--timing-function);
     width: 100%;
     height: 70px;
     background-color: var(--activity-modal);
-
-
 }
 
-
+/* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 /*  */
 
-.section.team .title {
+.team__title {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -607,23 +584,10 @@ transition: fill var(--duration) var(--timing-function);
 }
 
 
-.section.team .item {
+.team__item {
     background-color: var(--main-background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
-
-.section-title {
-
-    margin-bottom: 50px;
-
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-color-title);
-    
 }
 
 .text {
@@ -633,18 +597,20 @@ transition: fill var(--duration) var(--timing-function);
     color: var(--main-color-text);
 }
 
-.section.team .text {
+.team__text {
     font-size: 16px;
     font-weight: 400;
     text-align: center;
     margin-bottom: 16px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
 }
 
-.section.team {
+.team {
     background-color: #F5F4FA;
 }
 
-.section.team .title {
+.team__title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.187;
@@ -654,24 +620,24 @@ transition: fill var(--duration) var(--timing-function);
 }
 
 
-.section.team .item+.item {
+.team__item+.team__item {
     margin-left: 30px;
 }
 
-.person {
+.team__person {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.social-list {
+/* social */
+
+.social-network {
     display: flex;
     gap: 10px;
     justify-content: center;
-
 }
 
-
-.social-item .link {
+.social-network__link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -684,38 +650,34 @@ transition: fill var(--duration) var(--timing-function);
     transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function);
 }
 
-.social-icon {
+.social-network__icon {
     fill: currentColor;
 
 }
 
-.social-item .link:hover,
-.social-item .link:focus {
+.social-network__link:hover,
+.social-network__link:focus {
     color: var(--main-background-color);
     background-color: var(--accent-color);
 }
 
+/* +++++++++++++++++++++++++++++++++++++++++++++ */
 
 /* кліенти */
 
-.client-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
-.client-list {
+.client__list {
 display: flex;
 justify-content: center;
 gap: 30px;
 }
 
-.client-icon {
+.client__icon {
     fill: currentColor;
     width: 170px;
     height: 92px;
 }
 
-.client-section .link {
+.client__link {
     display: block;
     border: 1px solid var(--icon);
     border-radius: 4px;
@@ -726,8 +688,8 @@ gap: 30px;
     transition: color var(--duration) var(--timing-function), border-color var(--duration) var(--timing-function);
 }
 
-.client-section .link:hover,
-.client-section .link:focus {
+.client__link:hover,
+.client__link:focus {
     color: var(--accent-color);
     border-color: var(--accent-color);
 }
@@ -751,10 +713,11 @@ gap: 30px;
 }
 
 .footer .logo {
-    color: var(--main-background-color)
+    color: var(--main-background-color);
+    margin-bottom: 20px;
 }
 
-.address .link {
+.address__link {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -764,7 +727,7 @@ gap: 30px;
 }
 
 
-.link.addr {
+.address__link {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -773,47 +736,40 @@ gap: 30px;
     color: #FFFFFF;
 }
 
-.add-list {
+.address__list {
     list-style: none;
 }
 
-.add-list .item:not(:last-child) {
+.address__item:not(:last-child) {
     margin-bottom: 9px;
 }
 
-.add-list .link {
+.address__link {
     transition: color var(--duration) var(--timing-function);
 }
 
-.add-list .link:hover,
-.add-list .link:focus {
+.address__link:hover,
+.address__link:focus {
     color: var(--accent-color);
 }
 
-.footer .logo {
-    margin-bottom: 20px;
-}
 
 .container.foot-add {
 display: flex;
 align-items: baseline;
 }
 
-.block-add {
+.address-thomb {
     margin-right: 70px;
 }
 
 /* footer sosial */
 
-.footer-sections {
+/* .sociallink__list{
     display: flex;
+} */
 
-}
-.social-item-main {
-    display: flex;
-}
-
-.social-item-main .link{
+/* .sociallink__link {
 display: flex;
 align-items: center;
 justify-content: center;
@@ -824,42 +780,50 @@ border-radius: 50%;
 background-color: var(--white-ten-persent);
 }
 
-.sociallink .link {
+.sociallink__link {
 transition: color var(--duration) var(--timing-function), background-color var(--duration) var(--timing-function), stroke var(--duration) var(--timing-function);
 }
 
-.sociallink .link:hover,
-.sociallink .link:focus {
+.sociallink__link:hover,
+.sociallink__link:focus {
     background-color: var(--accent-color);
     color: var(--main-background-color);
    
+} */
+.sociallink {
+    margin-right: 93px;
 }
-.sociallink .title {
+
+.sociallink__title {
     color: var(--main-background-color);
     margin-bottom: 20px;
 }
 
-/* footer send */
+.social-network__icon--white {
+    color: var(--main-background-color);
+}
 
-.icon-send {
+.social-network__link--darkbg {
+background-color: var(--white-ten-persent);
+}
+
+/* footer send ======================================*/
+
+.send__icon {
     fill: #fff;
 }
 
-.send-btn {
+.send__btn {
     display: flex;
     gap: 10px;
 }
 
 
-.foot-block {
-    margin-right: 93px;
-}
-
-.send {
+.send-form__thomb {
     display: flex;
 }
 
-.send-title {
+.send-form__title {
     color: var(--main-background-color);
     margin-bottom: 20px;
     font-weight: 700;
@@ -869,7 +833,7 @@ transition: color var(--duration) var(--timing-function), background-color var(-
     text-transform: uppercase;
 }
 
-.send-input {
+.send__input {
     background-color: transparent;
     height: 50px;
     width: 348px;
@@ -884,22 +848,26 @@ transition: color var(--duration) var(--timing-function), background-color var(-
     transition: border var(--duration) var(--timing-function);
 }
 
-.send-input:focus {
-    border: 1px solid var(--accent-color);
-}
-
-.send-input {
+.send__input {
     padding-left: 16px;
 }
 
-.block-form {
+.send__input:focus {
+    border: 1px solid var(--accent-color);
+}
+
+.send-form {
     margin-right: auto;
 }
 
 
 /* PORTFOLIO */
 
-.title-port {
+.button-list__item+.button-list__item {
+    margin-left: 8px;
+}
+
+.card__title {
     margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
@@ -908,7 +876,7 @@ transition: color var(--duration) var(--timing-function), background-color var(-
     color: var(--main-color-title);
 }
 
-.category {
+.card__category {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.87;
@@ -920,60 +888,54 @@ transition: color var(--duration) var(--timing-function), background-color var(-
     justify-content: center;
 }
 
-
-.container .list.card {
+.card__list {
     display: flex;
-}
-
-.list.card {
     margin-top: 50px;
     flex-wrap: wrap;
 }
 
 
-.list.button .item+.item {
-    margin-left: 8px;
-}
 
-.list.card .item {
+
+.card {
     margin-right: 30px;
     margin-bottom: 30px;
 
 }
 
-.name-card {
+.card__name {
     padding: 20px 24px;
     border: 1px solid var(--bg-portfolio);
     border-top: none;
 }
 
-.list.card .item:nth-child(3n) {
+.card:nth-child(3n) {
     margin-right: 0px;
 }
 
-.list.card .item:nth-last-child(-n+3) {
+.card:nth-last-child(-n+3) {
     margin-bottom: 0px;
 }
 
-.list.card .link {
+.card__link {
     display: block;
 
     transition: box-shadow var(--duration) var(--timing-function);
 }
 
-.list.card .link:hover,
-.list.card .link:focus {
+.card__link:hover,
+.card__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /* Перехід у картках */
 
-.card-thumb {
+.card__thumb {
     position: relative;
     overflow: hidden;
 }
 
-.card-thumb::before {
+.card__thumb::before {
     content: "";
     position: absolute;
     top: 0;
@@ -987,13 +949,13 @@ transition: color var(--duration) var(--timing-function), background-color var(-
     transition: transform var(--duration) var(--timing-function), opacity var(--duration) var(--timing-function);
 }
 
-.item .link:hover .card-thumb::before,
-.item .link:focus .card-thumb::before {
+.card__link:hover .card__thumb::before,
+.card__link:focus .card__thumb::before {
     opacity: 1;
     transform: translate(0, 0);
 }
 
-.card-thumb .text {
+.card__text {
     position: absolute;
     top: 0;
     left: 0;
@@ -1013,8 +975,8 @@ transition: color var(--duration) var(--timing-function), background-color var(-
     
 }
 
-.item .link:hover .card-thumb .text,
-.item .link:focus .card-thumb .text {
+.card__link:hover .card__text,
+.card__link:focus .card__text {
     opacity: 1;
     transform: translate(0, 0);
 }
